--- a/coolcssdemo.html
+++ b/coolcssdemo.html
@@ -3,6 +3,8 @@
 <html>
 
 <head>
+    <title>Boo</title>
+    <link rel="icon" type="image/png" href="http://stuy.enschool.org/pics/header_logo.png">
     <link rel="stylesheet" type="text/css" href="./css/coolcssdemo.css" />
 </head>
 
